# cmbot

./: .dockerignore  Dockerfile  README.md  application.py  config.py  go.mod  go.sum  main.go  main.py  pyproject.toml  utils.py
.github/workflows/: docker-publish.yml
handlers/: __init__.py  webhook.go
handlers/callback/: __init__.py  p01_ai_help.py
handlers/message/: __init__.py  any_message.py  p01_command_start.py  p01_start.py  p02_channels.py  p03_help.py
jobs/: __init__.py  test_job.py
keyboards/: __init__.py  help_options.py  main_menu.py
utils/: __init__.py  bot_commands.py  telegram.go  telegram_types.go  webhook.go
